[OTA-2322] fix navbar flickering

--- a/ota-plus-web/app/reactapp/style/ota-default/common.scss
+++ b/ota-plus-web/app/reactapp/style/ota-default/common.scss
@@ -567,13 +567,12 @@ input {
   .right-nav {
     height: 100%;
     margin: 0;
-    float: right;
+    display: flex;
+    position: absolute;
+    right: 15px;
 
     li {
       height: 48px;
-      display: inline-block;
-      vertical-align: top;
-
       a {
         &:not(.add-button) {
           color: #888;
@@ -596,11 +595,17 @@ input {
     }
   }
 
-  @media only screen and (max-width: 1390px) {
+  @media only screen and (max-width: 1480px) {
     #navbar > .navbar-nav > li > a {
       padding: 15px 12px;
     }
   }
+  @media only screen and (max-width: 1280px) {
+    .right-nav {
+      position: relative;
+      padding-left: 18px;
+    }
+  } 
 }
 
 .menu-login-clickable {
